--- a/content/projects/SELinux.mdx
+++ b/content/projects/SELinux.mdx
@@ -1,6 +1,14 @@
-SELinux
-Security is always a concern when deploying, altering, or maintaining any system, including Linux. Explore Security-Enhanced Linux (SELinux) and how to use it to secure a running Linux system.
+---
+title: SELinux
+description: Security is always a concern when deploying, altering, or maintaining any system, including Linux. Explore Security-Enhanced Linux (SELinux) and how to use it to secure a running Linux system.
 Using Red Hat Enterprise OS, I completed a hands-on lab and an exam to pass this course
+date: "2024-04"
+published: true
+
+---
+
+
+SELinux
 
 
 <iframe
