--- a/content/projects/PracticalCryptography.mdx
+++ b/content/projects/PracticalCryptography.mdx
@@ -1,14 +1,16 @@
 ---
-title: chronark.com
-description: The website you're looking at
-repository: chronark/chronark.com
-url: https://chronark.com
-date: 2023-03-28
+title: Practical Cryptography
+description: Symmetric and asymmetric cryptography and compare different encryption levels, including full disk and partition. Hashing, salting, hash-based message authentication codes (HMACs), and key exchange. Cryptographic tools like Trusted Platform Module (TPM), hardware security module, and key management systems.
+date: 2024-04
 published: true
 ---
 
+One of the most difficult courses I took and passed the exam on
 
-Like so many others, I just wanted a place to collect some projects I worked on. Maybe I'll add a blog, maybe I won't. I'm not sure yet.
-
-If you like the design, check out the Repository on GitHub.
-
+<center><iframe
+  src="https://skillsoft.digitalbadges.skillsoft.com/embed/541ebeec-db8f-4f85-827f-05a83b33b7a1"
+  width="1000"
+  height="1000"
+  frameborder="0"
+  allowfullscreen>
+</iframe></center>
