--- a/content/projects/SELinux.mdx
+++ b/content/projects/SELinux.mdx
@@ -7,13 +7,6 @@ published: true
 ---
 
 
-SELinux
-
-
-<iframe
-  src="https://skillsoft.digitalbadges.skillsoft.com/embed/477c4074-5aa6-440a-9e62-def48b0f15ff"
-  width="800"
-  height="600"
-  frameborder="0"
-  allowfullscreen>
-</iframe>
+<div style="display: flex; justify-content: center;"> 
+  <iframe src="https://skillsoft.digitalbadges.skillsoft.com/embed/477c4074-5aa6-440a-9e62-def48b0f15ff"></iframe> 
+</div> 
