--- a/content/projects/SELinux.mdx
+++ b/content/projects/SELinux.mdx
@@ -7,5 +7,5 @@ published: true
 ---
 
 
-<embed type="text/html" src="https://skillsoft.digitalbadges.skillsoft.com/embed/477c4074-5aa6-440a-9e62-def48b0f15ff"  width="1000" height="1200"></embed>
+<embed type="text/html" src="https://skillsoft.digitalbadges.skillsoft.com/embed/477c4074-5aa6-440a-9e62-def48b0f15ff"  width="1000" height="1200" />
 
