--- a/content/projects/PracticalCryptography.mdx
+++ b/content/projects/PracticalCryptography.mdx
@@ -8,5 +8,5 @@ published: true
 ---
 
 
-[![](/https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/103325006.png)](https://skillsoft.digitalbadges.skillsoft.com/541ebeec-db8f-4f85-827f-05a83b33b7a1#gs.9a4ami)
+<iframe src="https://skillsoft.digitalbadges.skillsoft.com/embed/541ebeec-db8f-4f85-827f-05a83b33b7a1" width="800" height="1000"/>
 
