--- a/content/projects/ardahurbas.mdx
+++ b/content/projects/ardahurbas.mdx
@@ -1,10 +1,7 @@
 ---
-title: chronark.com
+title: ardahurbas.com
 description: The website you're looking at
-repository: chronark/chronark.com
-url: https://chronark.com
-date: 2023-03-28
-published: true
+date: "2024-05"
 ---
 
 
@@ -12,3 +9,4 @@ Like so many others, I just wanted a place to collect some projects I worked on.
 
 If you like the design, check out the Repository on GitHub.
 
+(https://github.com/ardahash "github")
