enabling dark mode

--- a/content/projects/LinuxShells.mdx
+++ b/content/projects/LinuxShells.mdx
@@ -5,4 +5,4 @@ date: "2024-04"
 published: true
 ---
 
-<iframe src="https://skillsoft.digitalbadges.skillsoft.com/embed/545a18fc-d0e8-4781-abc3-0a6164579fc6" width="800" height="1000"/>
+<iframe class="cred" src="https://skillsoft.digitalbadges.skillsoft.com/embed/545a18fc-d0e8-4781-abc3-0a6164579fc6" width="800" height="1000"/>
