--- a/content/projects/PracticalCryptography.mdx
+++ b/content/projects/PracticalCryptography.mdx
@@ -6,4 +6,4 @@ url: https://skillsoft.digitalbadges.skillsoft.com/541ebeec-db8f-4f85-827f-05a83
 published: true
   
 ---
-<iframe src="https://skillsoft.digitalbadges.skillsoft.com/embed/541ebeec-db8f-4f85-827f-05a83b33b7a1" width="800" height="1000"/>
+<iframe class="cred" src="https://skillsoft.digitalbadges.skillsoft.com/embed/541ebeec-db8f-4f85-827f-05a83b33b7a1" width="800" height="1000"/>
