--- a/content/projects/SELinux.mdx
+++ b/content/projects/SELinux.mdx
@@ -7,4 +7,4 @@ published: true
 ---
 
 
-<iframe src="https://skillsoft.digitalbadges.skillsoft.com/embed/477c4074-5aa6-440a-9e62-def48b0f15ff" width="800" height="1000"/>
+<iframe class="cred" src="https://skillsoft.digitalbadges.skillsoft.com/embed/477c4074-5aa6-440a-9e62-def48b0f15ff" width="800" height="1000"/>
