--- a/content/projects/enco.mdx
+++ b/content/projects/enco.mdx
@@ -5,5 +5,5 @@ published: true
 website: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
 ---
 
-<Image src="/public/EncoMark1.png" alt="Enco1" />
-<Image src="/public/EncoMark1_2.png" alt="Enco2" />
+![Enco1](/public/EncoMark1.png")
+![Enco2](/public/EncoMark1_2.png")
