--- a/content/projects/enco.mdx
+++ b/content/projects/enco.mdx
@@ -5,5 +5,5 @@ published: true
 website: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
 ---
 
-<img src="EncoMark1.png" alt="EncoMark1">
-<img src="EncoMark1_2.png" alt="EncoMark1_2">
+<img src="EncoMark1.png" alt="EncoMark1"/>
+<img src="EncoMark1_2.png" alt="EncoMark1_2"/>
