--- a/content/projects/enco.mdx
+++ b/content/projects/enco.mdx
@@ -2,8 +2,8 @@
 title: "Enco"
 description: Simple offline password manager and generator maintained with 1 file of python3 code.
 published: true
-website: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
+site: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
 ---
 
-<img src="EncoMark1.png" alt="EncoMark1"/>
-<img src="EncoMark1_2.png" alt="EncoMark1_2"/>
+<img src="/EncoMark1.png" alt="EncoMark1"/>
+<img src="/EncoMark1_2.png" alt="EncoMark1_2"/>
