--- a/content/projects/enco.mdx
+++ b/content/projects/enco.mdx
@@ -5,5 +5,6 @@ published: true
 site: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
 ---
 
-<img src="/EncoMark1.png" alt="EncoMark1"/>
-<img src="/EncoMark1_2.png" alt="EncoMark1_2"/>
+[![](/EncoMark1.png)]
+[![](/EncoMark1_2.png)]
+
