--- a/content/projects/enco.mdx
+++ b/content/projects/enco.mdx
@@ -2,9 +2,9 @@
 title: "Enco"
 description: Simple offline password manager and generator maintained with 1 file of python3 code.
 published: true
-site: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
+url: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
 ---
 
-[![](/EncoMark1.png)]
-[![](/EncoMark1_2.png)]
+!(/EncoMark1.png)
+!(/EncoMark1_2.png)
 
