--- a/content/projects/enco.mdx
+++ b/content/projects/enco.mdx
@@ -5,6 +5,6 @@ published: true
 url: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
 ---
 
-!(/EncoMark1.png)
-!(/EncoMark1_2.png)
+![Enco1](/EncoMark1.png)
+![Enco2](/EncoMark1_2.png)
 
