--- a/content/projects/enco.mdx
+++ b/content/projects/enco.mdx
@@ -5,6 +5,5 @@ published: true
 url: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
 ---
 
-![Enco1](/EncoMark1.png)
-![Enco2](/EncoMark1_2.png)
-
+[![](/EncoMark1.png)]
+[![](/EncoMark1_2.png)]
