--- a/content/projects/enco.mdx
+++ b/content/projects/enco.mdx
@@ -5,5 +5,5 @@ published: true
 url: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
 ---
 
-[![](/EncoMark1.png)]
-[![](/EncoMark1_2.png)]
+[![](/EncoMark1.png)](https://github.com/ardahash/OfflinePasswordEncryption)
+[![](/EncoMark1_2.png)](https://github.com/ardahash/OfflinePasswordEncryption)
