--- a/content/projects/Doloriter.mdx
+++ b/content/projects/Doloriter.mdx
@@ -1,9 +1,11 @@
 ---
 title: "Doloriter"
 description: AI generated Text Based RPG
+date: "2024-06"
 published: true
 url: https://doloriter.com  
 ---
 
-[![](https://github.com/ardahash/arda-bash-portfolio/blob/newmain/public/doloriter.PNG?raw=true)](https://doloriter.com) 
+[![](https://github.com/ardahash/arda-bash-portfolio/blob/newmain/public/doloriter.png?raw=true)](https://doloriter.com) 
 Doloriter is an AI text based RPG. It was built using Next.js, the Vercel AI SDK, and Google Gemini. It uses React Server Components with function calling to mix UI/Text.
+Built for the Gemini API developer competition
