--- a/content/projects/enco.mdx
+++ b/content/projects/enco.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Enco"
 description: Simple offline password manager and generator maintained with 1 file of python3 code.
+date: "2024-06"
 published: true
 url: https://github.com/ardahash/OfflinePasswordEncryption/tree/main  
 ---
