--- a/content/projects/iambragging.mdx
+++ b/content/projects/iambragging.mdx
@@ -1,9 +1,10 @@
 ---
 title: "I am bragging"
 description: A bragging platform
+date: "2024-06"
 published: true
 url: https://iambragging.com  
 ---
 
-[![](https://github.com/ardahash/arda-bash-portfolio/blob/newmain/public/iambragging.PNG?raw=true)](https://iambragging.com) 
+[![](https://github.com/ardahash/arda-bash-portfolio/blob/newmain/public/iambragging.png?raw=true)](https://iambragging.com) 
 I am bragging is an online platform where you can brag. Built using nextAuth to authenticate users with Google or Github, nextJs, and vercel domains to create sub-sites for users under the domain .iambragging.com. Check it out!
